# Bakalarka

./: Baka.docx  CMakeLists.txt
tester/: CMakeLists.txt  test_runner.cpp
tester/tests/: test_composite_filter.cpp  test_configuration_link.cpp  test_create.cpp  test_create_old.cpp  test_descriptors.cpp  test_descriptors_and_create.cpp  test_executor.cpp  test_filter_configuration_executor.cpp  test_filter_parameter.cpp  test_persistent_chain_configuration.cpp  test_utils.h
unneeded/console/: CMakeLists.txt  README.md
unneeded/console/src/: main.cpp  optimize.cpp  optimize.h  options.cpp  options.h  utils.cpp  utils.h
unneeded/desktop/: CMakeLists.txt  README.md
unneeded/desktop/src/: main.cpp
unneeded/desktop/src/resource/: resource.cpp
unneeded/desktop/src/ui/: filter_config_window.cpp  filter_config_window.h  filters_window.cpp  filters_window.h  main_window.cpp  main_window.h  parameters_optimization_dialog.cpp  parameters_optimization_dialog.h  simulation_window.cpp  simulation_window.h
unneeded/desktop/src/ui/helpers/: FilterListItem.cpp  FilterListItem.h  Model_Bounds_Panel.cpp  Model_Bounds_Panel.h  Select_Subject_Panel.cpp  Select_Subject_Panel.h  Select_Time_Segment_Id_Panel.cpp  Select_Time_Segment_Id_Panel.h  Signal_Group_Widget.cpp  Time_Segment_Group_Widget.cpp  filter_config_widgets.cpp  filter_config_widgets.h  general_container_edit.cpp  general_container_edit.h  gui_subchain.cpp  gui_subchain.h
unneeded/desktop/src/ui/simulation/: abstract_simulation_tab.cpp  (+9 more)
unneeded/wrappers/: CMakeLists.txt  README.md
unneeded/wrappers/game-wrapper/: CMakeLists.txt
unneeded/wrappers/game-wrapper/src/: configs.cpp  configs.h  game-optimizer-wrapper.cpp  game-optimizer-wrapper.h  game-wrapper.cpp  game-wrapper.h
unneeded/wrappers/interop-inspector/: CMakeLists.txt
unneeded/wrappers/interop-inspector/src/: interop-inspector.cpp  interop-inspector.h
(+3 files in other folders)
